populate log in UI with backend api populate sign up page with backend api modify login and signup pages to respond to api add css for user feedback div's
[Delivers #161200151]

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -87,6 +87,15 @@ label a:hover{
 #logini{
     display: none;
 }
+#danger{
+    color: red;
+}
+#danger2{
+    color: red;
+}
+#success{
+    color: #1c8c11;
+}
 
 
 
