--- a/UI/css/add.css
+++ b/UI/css/add.css
@@ -1,5 +1,5 @@
 body{
-    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    font: 15px/1.0 Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     background-color: #cfe4f7;
@@ -17,7 +17,7 @@ header {
     background-color: rgba(11, 3, 15, 0.973);
     color: rgb(36, 134, 23);
     padding: 20px;
-    min-height: 70px;
+    min-height: 35px;
     position: relative;
     margin: 0;
 }
@@ -34,10 +34,10 @@ header {
 }
 #menu {
     float: right;
-    padding-top: 15px;
+    padding-top: 10px;
 }
 #menu ul{
-    padding 0;
+    padding: 0;
     margin:0;
 
 }
@@ -54,12 +54,13 @@ header {
     color: #00FF00;
 }
 /* search bar */
-header .search{
-    top: 30%;
+.search{
     width: 400px;
+    margin-left: 10%;
     padding-left:60px;
-    margin-top: 5px;
+    margin-top: 3px;
     float: left;
+    padding-top: 3px;
 }
 
 
@@ -67,7 +68,7 @@ header input{
     width: 90%;
     display: block; 
     border: 1px solid #e8491d;
-    padding: 8px;
+    padding: 6px;
     border-radius: 5px;
 }
 .inner h1{
@@ -75,24 +76,24 @@ header input{
     color: crimson;
 
 }
-.add_form{
+#add_form{
     width: 50%;
     margin-left: 20%;
 }
-.add_form input[type=text] {
+#add_form input[type=text] {
     width: 100%;
-    padding: 12px 20px;
+    padding: 8px 20px;
     margin: 8px 0;
     box-sizing: border-box;
 }
 
-.add_form input[type=text]:focus {
+#add_form input[type=text]:focus {
     border: 3px solid #555;
 }
 textarea {
     width: 100%;
-    height: 150px;
-    padding: 12px 20px;
+    height: 80px;
+    padding: 8px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -100,7 +101,7 @@ textarea {
     font-size: 18px;
     resize: none;
 }
-.add_form textarea:focus {
+#add_form textarea:focus {
     border: 3px solid #555;
 }
 
@@ -114,7 +115,7 @@ textarea {
 	font-family: sans-serif;
     border: none;
     outline:none;
-	font-size: 18px;
+	font-size: 16px;
     border-radius: 5px;
 }
 
@@ -122,7 +123,7 @@ textarea {
 #admin{
     margin-top: 20px;
     background-color: #555;
-    padding: 20px;
+    padding: 15px;
     width: 70%;
     margin-left: 150px;
     min-height: auto;
@@ -148,11 +149,21 @@ textarea {
 #admin ul a:hover {
     background-color: #555;
 }
+#success{
+    color: #1c8c11;
+    width: 50%;
+    margin-left: 20%;
+}
+#danger{
+    color:  red;
+    width: 50%;
+    margin-left: 20%;
+}
 
 /* media query */
 @media (min-width:640px) {body {font-size: 1rem;}}
 @media (min-width:960px) {body {font-size: 1.2rem;}}
-@media (min-width:1100px) {body {font-size: 1.5rem;}}
+@media (min-width:1100px) {body {font-size: 1.2rem;}}
 
 @media only screen and (max-width: 900px) {
     body {
@@ -184,3 +195,4 @@ textarea {
         width: 80%;
         margin-left: 10%;
     }
+}
