--- a/css/order.css
+++ b/css/order.css
@@ -170,7 +170,34 @@ button#btn_order{
     cursor: pointer;
 }
 button#btn_order:hover {opacity: 1}
-
+#danger{
+    color: #e8491d;
+    background-color: rgb(56, 49, 145);
+    text-align: center;
+    -moz-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Opera */
+    animation: cssAnimation 0s ease-in 5s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
+    }
+}
 input#checkbox {
     width: 70px;
   height: 30px;
