--- a/css/home.css
+++ b/css/home.css
@@ -300,24 +300,55 @@ input[type=text]:focus {
 #submit:hover{
     background-color: #06D85F;
 }
-
-
-
+#success{
+    color: #fff;
+    text-align: center;
+    background-color: #1c8c11;
+}
+#danger{
+    background-color: #333;
+    -moz-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Opera */
+    animation: cssAnimation 0s ease-in s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:visible;
+    }
+}
 
 
 /* media query */
 @media (min-width:640px) {body {font-size: 1rem;}}
 @media (min-width:960px) {body {font-size: 1.2rem;}}
 @media (min-width:1100px) {body {font-size: 1.5rem;}}
-
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1038px) {
     body {
         background-color: rgb(192, 173, 67);
     }
     header {
-        padding: 20px;
+        padding: 30px;
         min-height: 100px;
         text-align: center;
+    }
+    #menu {
+        float: left;
+        padding-top: 15px;
     }
     footer{
         margin-top: 10%;
@@ -334,12 +365,35 @@ input[type=text]:focus {
     }
     #foods .food button{
         float: left;
+        font-size: 12px;
+        padding: 7px 20px;
     }
     #foods .food img {
         width: 100%;
     }
-}   
-/* #media for nav bar */
+}  
+@media only screen and (max-width: 1150px) {
+    body {
+        background-color: rgb(192, 173, 67);
+    }
+    header {
+        padding: 50px;
+        min-height: 100px;
+    } 
+    header #nav {
+        text-align: center;
+        float: none;
+    }
+    #menu {
+        float: left;
+        padding-top: 15px;
+    }
+    footer{
+        margin-top: 70%;
+        padding: 20px;
+        min-height: 100px;
+    }
+/* #media for nav bar */ 
 
 /* #media for pop up model */
 
@@ -350,4 +404,5 @@ input[type=text]:focus {
     .popup{
       width: 70%;
     }
+    
   }
