--- a/css/order.css
+++ b/css/order.css
@@ -207,14 +207,18 @@ input#checkbox {
 @media (min-width:960px) {body {font-size: 1.2rem;}}
 @media (min-width:1100px) {body {font-size: 1.5rem;}}
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1224px) {
     body {
         background-color: rgb(192, 173, 67);
     }
     header {
-        padding: 20px;
+        padding: 40px;
         min-height: 100px;
         text-align: center;
+    }
+    #menu {
+        float: center;
+        padding-top: 15px;
     }
     header #nav {
         text-align: center;
@@ -229,3 +233,11 @@ input#checkbox {
         text-align: center;
         
     }
+    button#btn_order{
+        padding: 7px 5px;
+        text-align: center;
+        font-size: 18px;
+        margin: 4px 2px;
+        border-radius: 5px;
+    }
+}
