--- a/css/home.css
+++ b/css/home.css
@@ -54,11 +54,10 @@ header {
     color: #00FF00;
 }
 /* search bar */
-header .search{
-    top: 30%;
+.search{
     width: 400px;
-    padding-left:60px;
-    margin-top: 5px;
+    margin-left: 10%;
+    margin-top: 20px;
     float: left;
 }
 
@@ -205,7 +204,7 @@ table .btn_add{
 footer{
     min-height: auto;
     padding: 10px;
-    margin-top: 60%;
+    margin-top: 70%;
     color: #fff;
     background-color: #0e0d0c;
     text-align: center;
@@ -337,18 +336,39 @@ input[type=text]:focus {
 @media (min-width:640px) {body {font-size: 1rem;}}
 @media (min-width:960px) {body {font-size: 1.2rem;}}
 @media (min-width:1100px) {body {font-size: 1.5rem;}}
+@media (max-width:1183px){
+    body{
+        background-color: rgb(192, 67, 84);
+    }
+    header {
+        padding: 20px;
+        min-height: auto;
+        text-align: center;
+    }
+    #nav{
+        float: none;
+    }
+    .search{
+        width: 50%;
+        margin-left: 25%;
+        padding-left:0%;
+        float: none;
+    }
+    
+    #menu {
+        text-align: center;
+        padding-top: 0px;
+        float: none;
+    }
+}
 @media only screen and (max-width: 1038px) {
     body {
-        background-color: rgb(192, 173, 67);
+        background-color: rgb(192, 67, 84);
     }
     header {
         padding: 30px;
-        min-height: 100px;
+        min-height: auto;
         text-align: center;
-    }
-    #menu {
-        float: left;
-        padding-top: 15px;
     }
     footer{
         margin-top: 10%;
@@ -377,21 +397,15 @@ input[type=text]:focus {
         background-color: rgb(192, 173, 67);
     }
     header {
-        padding: 50px;
-        min-height: 100px;
+        padding: 20px;
+        min-height: auto;
     } 
+    h1{
+        margin: 0;
+    }
     header #nav {
         text-align: center;
         float: none;
-    }
-    #menu {
-        float: left;
-        padding-top: 15px;
-    }
-    footer{
-        margin-top: 70%;
-        padding: 20px;
-        min-height: 100px;
     }
 /* #media for nav bar */ 
 
