--- a/css/order.css
+++ b/css/order.css
@@ -53,11 +53,10 @@ header {
     color: rgba(209, 230, 22, 0.973)
 }
 /* search bar */
-header .search{
-    top: 30%;
+.search{
     width: 400px;
-    padding-left:60px;
-    margin-top: 5px;
+    margin-left: 10%;
+    margin-top: 20px;
     float: left;
 }
 
@@ -158,10 +157,9 @@ button#btn_order{
     background-color: hsl(123, 69%, 41%);
     border: none;
     color: white;
-    padding: 12px 30px;
+    padding: 0.5em 3em;
     text-align: center;
-    font-size: 18px;
-    margin: 4px 2px;
+    font-weight: 400;
     opacity: 0.8;
     border-radius: 5px;
     transition: 0.3s;
@@ -174,13 +172,13 @@ button#btn_order:hover {opacity: 1}
     color: #e8491d;
     background-color: rgb(56, 49, 145);
     text-align: center;
-    -moz-animation: cssAnimation 0s ease-in 5s forwards;
+    -moz-animation: cssAnimation 0s ease-in 10s forwards;
     /* Firefox */
-    -webkit-animation: cssAnimation 0s ease-in 5s forwards;
+    -webkit-animation: cssAnimation 0s ease-in 10s forwards;
     /* Safari and Chrome */
-    -o-animation: cssAnimation 0s ease-in 5s forwards;
+    -o-animation: cssAnimation 0s ease-in 10s forwards;
     /* Opera */
-    animation: cssAnimation 0s ease-in 5s forwards;
+    animation: cssAnimation 0s ease-in 10s forwards;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
@@ -207,23 +205,37 @@ input#checkbox {
 @media (min-width:960px) {body {font-size: 1.2rem;}}
 @media (min-width:1100px) {body {font-size: 1.5rem;}}
 
-@media only screen and (max-width: 1224px) {
+@media only screen and (max-width: 1150px) {
     body {
         background-color: rgb(192, 173, 67);
     }
     header {
-        padding: 40px;
-        min-height: 100px;
+        padding: 20px;
+        min-height: auto;
         text-align: center;
     }
     #menu {
-        float: center;
-        padding-top: 15px;
-    }
-    header #nav {
         text-align: center;
+        padding-top: 0px;
         float: none;
     }
+    #nav{
+        float: none;
+    }
+    .search{
+        width: 50%;
+        margin-left: 25%;
+        padding-left:0%;
+        float: none;
+    }
+    #highlight{
+        text-align: center;
+        float: none;
+        color: rgb(148, 63, 56);
+        font-family: "Times New Roman", Times, serif;
+    }
+    
+}
     section .inner{
         float: none;
         width: 100%;
