--- a/css/add.css
+++ b/css/add.css
@@ -156,6 +156,7 @@ textarea {
     margin-top: 10px;
     padding: 15px;
     width: 70%;
+    border-radius: 5px;
     margin-left: 150px;
     min-height: auto;
     display: none;
@@ -166,11 +167,36 @@ textarea {
     background-color: #e8491d;
     text-align: center;
     margin-top: 10px;
-    padding: 15px;
+    padding: 10px;
+    border-radius: 5px;
     width: 70%;
     margin-left: 150px;
     min-height: auto;
     display: none;
+    -moz-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Opera */
+    animation: cssAnimation 0s ease-in 10s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
+    }
+}
 
 }
 #orders{
